/*
 * Copyright (C) 2018 Google LLC.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
    id 'java'
}

buildDir = '/tmp/gradle_build/dicom_adapter/util'

sourceCompatibility = 1.11
version = '0.0.1'

compileJava {
    // Print out detailed deprecation warnings.
    options.deprecation = true
}

repositories {
    mavenCentral()
    maven { url 'http://www.dcm4che.org/maven2/' }
}

dependencies {
    compile "org.dcm4che:dcm4che-core:3.3.8"
    compile "org.dcm4che:dcm4che-net:3.3.8"
    compile "org.json:json:20180813"
    compile "com.google.cloud:google-cloud-monitoring:1.98.0"

    testCompile "com.google.truth:truth:1.0"
    testCompile "junit:junit:4.2"
    testCompile project(path: ":dicom_util", configuration: 'testArtifacts')
}

configurations {
    testArtifacts
}

task testJar (type: Jar) {
    baseName = "${project.name}-test"
    from sourceSets.test.output
}

artifacts {
    testArtifacts testJar
}